Study and practice from the book to page 124.

--- a/Book - Python Crash Course/drafts.ipynb
+++ b/Book - Python Crash Course/drafts.ipynb
@@ -1848,6 +1848,532 @@
     "friends = {'Astolfo', 'Reginaldo', 'Claudomiro'}\n",
     "print(type(friends))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T18:14:40.674577Z",
+     "start_time": "2021-07-24T18:14:40.669977Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{101: 'Mauá', 102: 'São Mateus', 103: 'Diadema', 104: 'Ribeirão Pires'}, {201: 'Mauá', 202: 'Pq. São Rafael'}, {301: 'Mauá', 302: 'Pq. São Rafael', 303: 'Santo Amaro', 304: 'Suzano', 305: 'Itaim Paulista'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_shift = {101: 'Mauá', 102: 'São Mateus',\n",
+    "               103: 'Diadema', 104: 'Ribeirão Pires'}\n",
+    "second_shift = {201: 'Mauá', 202: 'Pq. São Rafael'}\n",
+    "third_shift = {301: 'Mauá', 302: 'Pq. São Rafael',\n",
+    "               303: 'Santo Amaro', 304: 'Suzano', 305: 'Itaim Paulista'}\n",
+    "\n",
+    "six_by_two = [first_shift, second_shift, third_shift]\n",
+    "\n",
+    "print(six_by_two)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T18:15:57.619859Z",
+     "start_time": "2021-07-24T18:15:57.609401Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{101: 'Mauá', 102: 'São Mateus', 103: 'Diadema', 104: 'Ribeirão Pires'}\n",
+      "{201: 'Mauá', 202: 'Pq. São Rafael'}\n",
+      "{301: 'Mauá', 302: 'Pq. São Rafael', 303: 'Santo Amaro', 304: 'Suzano', 305: 'Itaim Paulista'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for shift in six_by_two:\n",
+    "    print(shift)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T18:18:36.260511Z",
+     "start_time": "2021-07-24T18:18:36.253367Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of lines from the third shift is 5.\n"
+     ]
+    }
+   ],
+   "source": [
+    "size_third = len(six_by_two[2])\n",
+    "print(f'The number of lines from the third shift is {size_third}.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T18:58:17.339098Z",
+     "start_time": "2021-07-24T18:58:17.325346Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "availables = []   \n",
+    "for i in range(5):\n",
+    "    internal = {'Line':'Internal Transport'}\n",
+    "    availables.append(internal)\n",
+    "        \n",
+    "print(len(availables))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T18:34:17.714766Z",
+     "start_time": "2021-07-24T18:34:17.711820Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Line': 'Internal Transport'}\n",
+      "{'Line': 'Internal Transport'}\n",
+      "{'Line': 'Internal Transport'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in availables[:3]:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T18:58:19.498751Z",
+     "start_time": "2021-07-24T18:58:19.491968Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'Line': 'Busy'}, {'Line': 'Busy'}, {'Line': 'Internal Transport'}, {'Line': 'Internal Transport'}, {'Line': 'Internal Transport'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in availables[:2]:\n",
+    "    if i['Line'] == 'Internal Transport':\n",
+    "        i['Line'] = 'Busy'\n",
+    "\n",
+    "print(availables)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T19:58:40.774742Z",
+     "start_time": "2021-07-24T19:58:40.763159Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "first_shift['101'] = {\n",
+    "    'Route':'Mauá',\n",
+    "    'KM': 52,\n",
+    "    'Driver':'João',\n",
+    "    'Occupation(%)':75,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T19:58:55.580273Z",
+     "start_time": "2021-07-24T19:58:55.571186Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{101: 'Mauá', 102: 'São Mateus', 103: 'Diadema', 104: 'Ribeirão Pires', '101': {'Route': 'Mauá', 'KM': 52, 'Driver': 'João', 'Occupation(%)': 75}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(first_shift)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T20:00:06.381793Z",
+     "start_time": "2021-07-24T20:00:06.365815Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Route': 'Mauá', 'KM': 52, 'Driver': 'João', 'Occupation(%)': 75}"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_shift.pop('101')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T20:00:18.695593Z",
+     "start_time": "2021-07-24T20:00:18.676112Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{101: 'Mauá', 102: 'São Mateus', 103: 'Diadema', 104: 'Ribeirão Pires'}"
+      ]
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_shift"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T20:03:29.069794Z",
+     "start_time": "2021-07-24T20:03:29.063377Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "first_shift[101] = {\n",
+    "    'Route': 'Mauá',\n",
+    "    'KM': 52,\n",
+    "    'Driver': 'João',\n",
+    "    'Occupation(%)': 75,\n",
+    "}\n",
+    "first_shift[102] = {\n",
+    "    'Route': 'São Mateus',\n",
+    "    'KM': 42,\n",
+    "    'Driver': 'Otavio',\n",
+    "    'Occupation(%)': 53,\n",
+    "}\n",
+    "first_shift[103] = {\n",
+    "    'Route': 'Diadema',\n",
+    "    'KM': 31,\n",
+    "    'Driver': 'Leonardo',\n",
+    "    'Occupation(%)': 25,\n",
+    "}\n",
+    "first_shift[104] = {\n",
+    "    'Route': 'Ribeirão Pires',\n",
+    "    'KM': 56,\n",
+    "    'Driver': 'Chico Grilo',\n",
+    "    'Occupation(%)': 17,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T20:03:30.260366Z",
+     "start_time": "2021-07-24T20:03:30.252840Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{101: {'Route': 'Mauá', 'KM': 52, 'Driver': 'João', 'Occupation(%)': 75}, 102: {'Route': 'São Mateus', 'KM': 42, 'Driver': 'Otavio', 'Occupation(%)': 53}, 103: {'Route': 'Diadema', 'KM': 31, 'Driver': 'Leonardo', 'Occupation(%)': 25}, 104: {'Route': 'Ribeirão Pires', 'KM': 56, 'Driver': 'Chico Grilo', 'Occupation(%)': 17}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(first_shift)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T20:13:28.161881Z",
+     "start_time": "2021-07-24T20:13:28.151590Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(first_shift)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T20:16:58.825614Z",
+     "start_time": "2021-07-24T20:16:58.819550Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Route': 'Mauá', 'KM': 52, 'Driver': ['João', 'Alessandro'], 'Occupation(%)': 75}\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_shift[101]['Driver'] = ['João','Alessandro']\n",
+    "print(first_shift[101])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T20:23:34.569026Z",
+     "start_time": "2021-07-24T20:23:34.555923Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You're official driver is João.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"You're official driver is {first_shift[101]['Driver'][0]}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-24T20:51:52.361942Z",
+     "start_time": "2021-07-24T20:51:52.340367Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The drivers are:\n",
+      "João\n",
+      "Alessandro\n"
+     ]
+    }
+   ],
+   "source": [
+    "for line, desc in first_shift.items():\n",
+    "    if float(line) == 101:\n",
+    "        print('The drivers are:')\n",
+    "        for i in desc['Driver']:\n",
+    "            print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-25T00:21:22.559735Z",
+     "start_time": "2021-07-25T00:21:20.930367Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This a exaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaampleeeeeeeeeeeeeeeeeeee to use a big phrase in an input() method.\n",
+      "Did you understand? (Y / N) y\n",
+      "\n",
+      "Good job!\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = 'This a exaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaampleeeeeeeeeeeeeeeeeeee'\n",
+    "prompt+= ' to use a big phrase in an input() method.\\nDid you understand? (Y / N) '\n",
+    "ask = input(prompt)\n",
+    "if ask.upper() == 'Y':\n",
+    "    print('\\nGood job!')\n",
+    "else:\n",
+    "    print('\\nReally?!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-25T00:32:21.305782Z",
+     "start_time": "2021-07-25T00:32:15.154626Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Tell me something, and I will repeat it back to you:\n",
+      "Enter 'quit' to end the program. ok\n",
+      "\n",
+      "Tell me something, and I will repeat it back to you:\n",
+      "Enter 'quit' to end the program. end\n",
+      "\n",
+      "Tell me something, and I will repeat it back to you:\n",
+      "Enter 'quit' to end the program. QUIT\n",
+      "Goodbye!\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = \"\\nTell me something, and I will repeat it back to you:\"\n",
+    "prompt += \"\\nEnter 'quit' to end the program. \"\n",
+    "\n",
+    "message = ''\n",
+    "while message.lower() != 'quit':\n",
+    "    message = input(prompt)\n",
+    "    \n",
+    "print('Goodbye!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-25T00:46:48.652704Z",
+     "start_time": "2021-07-25T00:46:07.761916Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Tell me something, and I will repeat it back to you:\n",
+      "Enter 'quit' to end the program. Let's do that!\n",
+      "Let's do that!\n",
+      "\n",
+      "Tell me something, and I will repeat it back to you:\n",
+      "Enter 'quit' to end the program. Try again\n",
+      "Try again\n",
+      "\n",
+      "Tell me something, and I will repeat it back to you:\n",
+      "Enter 'quit' to end the program. Quit\n"
+     ]
+    }
+   ],
+   "source": [
+    "active = True    # flag with a function while\n",
+    "while active:\n",
+    "    message = input(prompt)\n",
+    "\n",
+    "    if message.lower() == 'quit':\n",
+    "        active = False\n",
+    "    else:\n",
+    "        print(message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
