Study and practice the book, review up to page 132.

--- a/Book - Python Crash Course/drafts.ipynb
+++ b/Book - Python Crash Course/drafts.ipynb
@@ -1981,32 +1981,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-07-24T18:58:19.498751Z",
-     "start_time": "2021-07-24T18:58:19.491968Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'Line': 'Busy'}, {'Line': 'Busy'}, {'Line': 'Internal Transport'}, {'Line': 'Internal Transport'}, {'Line': 'Internal Transport'}]\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in availables[:2]:\n",
-    "    if i['Line'] == 'Internal Transport':\n",
-    "        i['Line'] = 'Busy'\n",
-    "\n",
-    "print(availables)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 177,
    "metadata": {
     "ExecuteTime": {
@@ -2359,6 +2333,78 @@
     "        active = False\n",
     "    else:\n",
     "        print(message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-25T14:01:22.575544Z",
+     "start_time": "2021-07-25T14:01:22.570454Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Verifying user: Eduardo\n",
+      "Verifying user: Fabiola\n",
+      "Verifying user: Beatriz\n",
+      "Verifying user: Flavia\n",
+      "Verifying user: Italo\n",
+      "\n",
+      "The following users have been confirmed:\n",
+      "Eduardo\n",
+      "Fabiola\n",
+      "Beatriz\n",
+      "Flavia\n",
+      "Italo\n"
+     ]
+    }
+   ],
+   "source": [
+    "unconfirmed_users = ['Italo','Flavia','Beatriz','Fabiola','Eduardo']\n",
+    "confirmed_users = []\n",
+    "\n",
+    "while unconfirmed_users:\n",
+    "    current_user = unconfirmed_users.pop()\n",
+    "    \n",
+    "    print(f'Verifying user: {current_user.title()}')\n",
+    "    confirmed_users.append(current_user)\n",
+    "\n",
+    "print(\"\\nThe following users have been confirmed:\")\n",
+    "for confirmed_user in confirmed_users:\n",
+    "    print(confirmed_user.title())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-25T14:18:22.474118Z",
+     "start_time": "2021-07-25T14:18:22.462429Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Italy', 'Germany', 'Polska']\n"
+     ]
+    }
+   ],
+   "source": [
+    "countries = ['Brazil', 'Brazil', 'Brazil', 'Brazil',\n",
+    "             'Italy', 'Brazil', 'Germany', 'Polska']\n",
+    "\n",
+    "while 'Brazil' in countries:\n",
+    "    countries.remove('Brazil')\n",
+    "\n",
+    "print(countries)"
    ]
   },
   {
