--- a/Book - Python Crash Course/drafts.ipynb
+++ b/Book - Python Crash Course/drafts.ipynb
@@ -2409,6 +2409,718 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-26T17:28:45.531621Z",
+     "start_time": "2021-07-26T17:28:45.522692Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# When you use default values, any parameter with a default value needs to be listed\n",
+    "# after all the parameters that don’t have default values. This allows Python to continue \n",
+    "# interpreting positional arguments correctly.\n",
+    "\n",
+    "def say_hello(name, greeting = 'nice to meet you!'):\n",
+    "    print(f'\\nHello {name.title()}, {greeting}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-26T17:28:46.852961Z",
+     "start_time": "2021-07-26T17:28:46.846452Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Hello Diogo, nice to meet you!\n"
+     ]
+    }
+   ],
+   "source": [
+    "say_hello('Diogo')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-26T17:28:47.880713Z",
+     "start_time": "2021-07-26T17:28:47.875251Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "?tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-26T17:31:01.534801Z",
+     "start_time": "2021-07-26T17:31:01.526666Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def full_name(name, lastname, middle_name=''):  # optional argument\n",
+    "    return print(f'{name.title()} {middle_name.title()} {lastname.title()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-26T17:31:01.755667Z",
+     "start_time": "2021-07-26T17:31:01.751798Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Diogo  Dantas\n"
+     ]
+    }
+   ],
+   "source": [
+    "full_name('diogo','dantas')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-26T17:46:57.295439Z",
+     "start_time": "2021-07-26T17:46:57.278934Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def build_person(name, lastname, age = None):\n",
+    "    person = {\n",
+    "        'name': name.title(),\n",
+    "        'last': lastname.title(),\n",
+    "        'age': age,\n",
+    "    }\n",
+    "    return person"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-26T17:46:57.983246Z",
+     "start_time": "2021-07-26T17:46:57.977861Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Diogo', 'last': 'Dantas', 'age': None}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "build_person('diogo', 'dantas')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-26T18:13:16.929068Z",
+     "start_time": "2021-07-26T18:13:16.920475Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Alicia!\n",
+      "Hello, Samantha!\n",
+      "Hello, Georgia!\n",
+      "Hello, Alexa!\n",
+      "Hello, Clemente!\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = ['alicia', 'samantha', 'georgia', 'alexa', 'clemente']\n",
+    "\n",
+    "\n",
+    "def greet_users(names):\n",
+    "    \"\"\"Print a simple greeting to each user in the list.\"\"\"\n",
+    "    for name in names:\n",
+    "        msg = f\"Hello, {name.title()}!\"\n",
+    "        print(msg)\n",
+    "\n",
+    "\n",
+    "greet_users(names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-26T18:13:53.847233Z",
+     "start_time": "2021-07-26T18:13:53.836768Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "?greet_users"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can send a copy of a list to a function like this: function_name(list_name <b>[:]</b> )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-26T20:44:04.756344Z",
+     "start_time": "2021-07-26T20:44:04.751160Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'location': 'princeton', 'field': 'physics', 'first_name': 'albert', 'last_name': 'einstein'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def build_profile(first, last, **user_info):\n",
+    "    \"\"\"Build a dictionary containing everything we know about a user.\"\"\"\n",
+    "    user_info['first_name'] = first\n",
+    "    user_info['last_name'] = last\n",
+    "    return user_info\n",
+    "\n",
+    "\n",
+    "user_profile = build_profile('albert', 'einstein',\n",
+    "                             location='princeton',\n",
+    "                             field='physics')\n",
+    "print(user_profile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-26T20:56:50.351979Z",
+     "start_time": "2021-07-26T20:56:50.334887Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['CLD_CONTINUED',\n",
+       " 'CLD_DUMPED',\n",
+       " 'CLD_EXITED',\n",
+       " 'CLD_TRAPPED',\n",
+       " 'DirEntry',\n",
+       " 'EX_CANTCREAT',\n",
+       " 'EX_CONFIG',\n",
+       " 'EX_DATAERR',\n",
+       " 'EX_IOERR',\n",
+       " 'EX_NOHOST',\n",
+       " 'EX_NOINPUT',\n",
+       " 'EX_NOPERM',\n",
+       " 'EX_NOUSER',\n",
+       " 'EX_OK',\n",
+       " 'EX_OSERR',\n",
+       " 'EX_OSFILE',\n",
+       " 'EX_PROTOCOL',\n",
+       " 'EX_SOFTWARE',\n",
+       " 'EX_TEMPFAIL',\n",
+       " 'EX_UNAVAILABLE',\n",
+       " 'EX_USAGE',\n",
+       " 'F_LOCK',\n",
+       " 'F_OK',\n",
+       " 'F_TEST',\n",
+       " 'F_TLOCK',\n",
+       " 'F_ULOCK',\n",
+       " 'MutableMapping',\n",
+       " 'NGROUPS_MAX',\n",
+       " 'O_ACCMODE',\n",
+       " 'O_APPEND',\n",
+       " 'O_ASYNC',\n",
+       " 'O_CLOEXEC',\n",
+       " 'O_CREAT',\n",
+       " 'O_DIRECT',\n",
+       " 'O_DIRECTORY',\n",
+       " 'O_DSYNC',\n",
+       " 'O_EXCL',\n",
+       " 'O_LARGEFILE',\n",
+       " 'O_NDELAY',\n",
+       " 'O_NOATIME',\n",
+       " 'O_NOCTTY',\n",
+       " 'O_NOFOLLOW',\n",
+       " 'O_NONBLOCK',\n",
+       " 'O_RDONLY',\n",
+       " 'O_RDWR',\n",
+       " 'O_RSYNC',\n",
+       " 'O_SYNC',\n",
+       " 'O_TRUNC',\n",
+       " 'O_WRONLY',\n",
+       " 'POSIX_FADV_DONTNEED',\n",
+       " 'POSIX_FADV_NOREUSE',\n",
+       " 'POSIX_FADV_NORMAL',\n",
+       " 'POSIX_FADV_RANDOM',\n",
+       " 'POSIX_FADV_SEQUENTIAL',\n",
+       " 'POSIX_FADV_WILLNEED',\n",
+       " 'PRIO_PGRP',\n",
+       " 'PRIO_PROCESS',\n",
+       " 'PRIO_USER',\n",
+       " 'P_ALL',\n",
+       " 'P_NOWAIT',\n",
+       " 'P_NOWAITO',\n",
+       " 'P_PGID',\n",
+       " 'P_PID',\n",
+       " 'P_WAIT',\n",
+       " 'PathLike',\n",
+       " 'RTLD_DEEPBIND',\n",
+       " 'RTLD_GLOBAL',\n",
+       " 'RTLD_LAZY',\n",
+       " 'RTLD_LOCAL',\n",
+       " 'RTLD_NODELETE',\n",
+       " 'RTLD_NOLOAD',\n",
+       " 'RTLD_NOW',\n",
+       " 'R_OK',\n",
+       " 'SCHED_BATCH',\n",
+       " 'SCHED_FIFO',\n",
+       " 'SCHED_IDLE',\n",
+       " 'SCHED_OTHER',\n",
+       " 'SCHED_RESET_ON_FORK',\n",
+       " 'SCHED_RR',\n",
+       " 'SEEK_CUR',\n",
+       " 'SEEK_END',\n",
+       " 'SEEK_SET',\n",
+       " 'ST_APPEND',\n",
+       " 'ST_MANDLOCK',\n",
+       " 'ST_NOATIME',\n",
+       " 'ST_NODEV',\n",
+       " 'ST_NODIRATIME',\n",
+       " 'ST_NOEXEC',\n",
+       " 'ST_NOSUID',\n",
+       " 'ST_RDONLY',\n",
+       " 'ST_RELATIME',\n",
+       " 'ST_SYNCHRONOUS',\n",
+       " 'ST_WRITE',\n",
+       " 'TMP_MAX',\n",
+       " 'WCONTINUED',\n",
+       " 'WCOREDUMP',\n",
+       " 'WEXITED',\n",
+       " 'WEXITSTATUS',\n",
+       " 'WIFCONTINUED',\n",
+       " 'WIFEXITED',\n",
+       " 'WIFSIGNALED',\n",
+       " 'WIFSTOPPED',\n",
+       " 'WNOHANG',\n",
+       " 'WNOWAIT',\n",
+       " 'WSTOPPED',\n",
+       " 'WSTOPSIG',\n",
+       " 'WTERMSIG',\n",
+       " 'WUNTRACED',\n",
+       " 'W_OK',\n",
+       " 'XATTR_CREATE',\n",
+       " 'XATTR_REPLACE',\n",
+       " 'XATTR_SIZE_MAX',\n",
+       " 'X_OK',\n",
+       " '_Environ',\n",
+       " '__all__',\n",
+       " '__builtins__',\n",
+       " '__cached__',\n",
+       " '__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " '_execvpe',\n",
+       " '_exists',\n",
+       " '_exit',\n",
+       " '_fspath',\n",
+       " '_fwalk',\n",
+       " '_get_exports_list',\n",
+       " '_putenv',\n",
+       " '_spawnvef',\n",
+       " '_unsetenv',\n",
+       " '_wrap_close',\n",
+       " 'abc',\n",
+       " 'abort',\n",
+       " 'access',\n",
+       " 'altsep',\n",
+       " 'chdir',\n",
+       " 'chmod',\n",
+       " 'chown',\n",
+       " 'chroot',\n",
+       " 'close',\n",
+       " 'closerange',\n",
+       " 'confstr',\n",
+       " 'confstr_names',\n",
+       " 'cpu_count',\n",
+       " 'ctermid',\n",
+       " 'curdir',\n",
+       " 'defpath',\n",
+       " 'device_encoding',\n",
+       " 'devnull',\n",
+       " 'dup',\n",
+       " 'dup2',\n",
+       " 'environ',\n",
+       " 'environb',\n",
+       " 'error',\n",
+       " 'execl',\n",
+       " 'execle',\n",
+       " 'execlp',\n",
+       " 'execlpe',\n",
+       " 'execv',\n",
+       " 'execve',\n",
+       " 'execvp',\n",
+       " 'execvpe',\n",
+       " 'extsep',\n",
+       " 'fchdir',\n",
+       " 'fchmod',\n",
+       " 'fchown',\n",
+       " 'fdatasync',\n",
+       " 'fdopen',\n",
+       " 'fork',\n",
+       " 'forkpty',\n",
+       " 'fpathconf',\n",
+       " 'fsdecode',\n",
+       " 'fsencode',\n",
+       " 'fspath',\n",
+       " 'fstat',\n",
+       " 'fstatvfs',\n",
+       " 'fsync',\n",
+       " 'ftruncate',\n",
+       " 'fwalk',\n",
+       " 'get_blocking',\n",
+       " 'get_exec_path',\n",
+       " 'get_inheritable',\n",
+       " 'get_terminal_size',\n",
+       " 'getcwd',\n",
+       " 'getcwdb',\n",
+       " 'getegid',\n",
+       " 'getenv',\n",
+       " 'getenvb',\n",
+       " 'geteuid',\n",
+       " 'getgid',\n",
+       " 'getgrouplist',\n",
+       " 'getgroups',\n",
+       " 'getloadavg',\n",
+       " 'getlogin',\n",
+       " 'getpgid',\n",
+       " 'getpgrp',\n",
+       " 'getpid',\n",
+       " 'getppid',\n",
+       " 'getpriority',\n",
+       " 'getresgid',\n",
+       " 'getresuid',\n",
+       " 'getsid',\n",
+       " 'getuid',\n",
+       " 'getxattr',\n",
+       " 'initgroups',\n",
+       " 'isatty',\n",
+       " 'kill',\n",
+       " 'killpg',\n",
+       " 'lchown',\n",
+       " 'linesep',\n",
+       " 'link',\n",
+       " 'listdir',\n",
+       " 'listxattr',\n",
+       " 'lockf',\n",
+       " 'lseek',\n",
+       " 'lstat',\n",
+       " 'major',\n",
+       " 'makedev',\n",
+       " 'makedirs',\n",
+       " 'minor',\n",
+       " 'mkdir',\n",
+       " 'mkfifo',\n",
+       " 'mknod',\n",
+       " 'name',\n",
+       " 'nice',\n",
+       " 'open',\n",
+       " 'openpty',\n",
+       " 'pardir',\n",
+       " 'path',\n",
+       " 'pathconf',\n",
+       " 'pathconf_names',\n",
+       " 'pathsep',\n",
+       " 'pipe',\n",
+       " 'pipe2',\n",
+       " 'popen',\n",
+       " 'posix_fadvise',\n",
+       " 'posix_fallocate',\n",
+       " 'pread',\n",
+       " 'preadv',\n",
+       " 'putenv',\n",
+       " 'pwrite',\n",
+       " 'pwritev',\n",
+       " 'read',\n",
+       " 'readlink',\n",
+       " 'readv',\n",
+       " 'register_at_fork',\n",
+       " 'remove',\n",
+       " 'removedirs',\n",
+       " 'removexattr',\n",
+       " 'rename',\n",
+       " 'renames',\n",
+       " 'replace',\n",
+       " 'rmdir',\n",
+       " 'scandir',\n",
+       " 'sched_get_priority_max',\n",
+       " 'sched_get_priority_min',\n",
+       " 'sched_getaffinity',\n",
+       " 'sched_getparam',\n",
+       " 'sched_getscheduler',\n",
+       " 'sched_param',\n",
+       " 'sched_rr_get_interval',\n",
+       " 'sched_setaffinity',\n",
+       " 'sched_setparam',\n",
+       " 'sched_setscheduler',\n",
+       " 'sched_yield',\n",
+       " 'sendfile',\n",
+       " 'sep',\n",
+       " 'set_blocking',\n",
+       " 'set_inheritable',\n",
+       " 'setegid',\n",
+       " 'seteuid',\n",
+       " 'setgid',\n",
+       " 'setgroups',\n",
+       " 'setpgid',\n",
+       " 'setpgrp',\n",
+       " 'setpriority',\n",
+       " 'setregid',\n",
+       " 'setresgid',\n",
+       " 'setresuid',\n",
+       " 'setreuid',\n",
+       " 'setsid',\n",
+       " 'setuid',\n",
+       " 'setxattr',\n",
+       " 'spawnl',\n",
+       " 'spawnle',\n",
+       " 'spawnlp',\n",
+       " 'spawnlpe',\n",
+       " 'spawnv',\n",
+       " 'spawnve',\n",
+       " 'spawnvp',\n",
+       " 'spawnvpe',\n",
+       " 'st',\n",
+       " 'stat',\n",
+       " 'stat_result',\n",
+       " 'statvfs',\n",
+       " 'statvfs_result',\n",
+       " 'strerror',\n",
+       " 'supports_bytes_environ',\n",
+       " 'supports_dir_fd',\n",
+       " 'supports_effective_ids',\n",
+       " 'supports_fd',\n",
+       " 'supports_follow_symlinks',\n",
+       " 'symlink',\n",
+       " 'sync',\n",
+       " 'sys',\n",
+       " 'sysconf',\n",
+       " 'sysconf_names',\n",
+       " 'system',\n",
+       " 'tcgetpgrp',\n",
+       " 'tcsetpgrp',\n",
+       " 'terminal_size',\n",
+       " 'times',\n",
+       " 'times_result',\n",
+       " 'truncate',\n",
+       " 'ttyname',\n",
+       " 'umask',\n",
+       " 'uname',\n",
+       " 'uname_result',\n",
+       " 'unlink',\n",
+       " 'unsetenv',\n",
+       " 'urandom',\n",
+       " 'utime',\n",
+       " 'wait',\n",
+       " 'wait3',\n",
+       " 'wait4',\n",
+       " 'waitid',\n",
+       " 'waitid_result',\n",
+       " 'waitpid',\n",
+       " 'walk',\n",
+       " 'write',\n",
+       " 'writev']"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "dir(os)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-26T21:17:04.690060Z",
+     "start_time": "2021-07-26T21:17:04.686292Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import date as dt\n",
+    "\n",
+    "now = dt.today()\n",
+    "week = dt.weekday(now)\n",
+    "week"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-26T21:08:49.058321Z",
+     "start_time": "2021-07-26T21:08:49.050761Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__add__',\n",
+       " '__class__',\n",
+       " '__delattr__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__radd__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__rsub__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__sub__',\n",
+       " '__subclasshook__',\n",
+       " 'ctime',\n",
+       " 'day',\n",
+       " 'fromisoformat',\n",
+       " 'fromordinal',\n",
+       " 'fromtimestamp',\n",
+       " 'isocalendar',\n",
+       " 'isoformat',\n",
+       " 'isoweekday',\n",
+       " 'max',\n",
+       " 'min',\n",
+       " 'month',\n",
+       " 'replace',\n",
+       " 'resolution',\n",
+       " 'strftime',\n",
+       " 'timetuple',\n",
+       " 'today',\n",
+       " 'toordinal',\n",
+       " 'weekday',\n",
+       " 'year']"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(dt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-07-26T21:08:55.485561Z",
+     "start_time": "2021-07-26T21:08:55.481153Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "?dt.strftime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
